# pydom

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-test.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/api-reference/: index.rst
docs/api-reference/pydom/: index.rst
docs/examples/: index.rst
docs/examples/fastapi/: index.rst
docs/examples/flask/: index.rst
docs/examples/htmx/: index.rst
docs/examples/tailwind/: index.rst
docs/user-guide/: index.rst  installation.rst
docs/user-guide/advanced/: context.rst  index.rst  rendering.rst
docs/user-guide/basics/: index.rst  rendering-components.rst  syntax.rst
docs/user-guide/components/: base-component.rst  fragment.rst  index.rst  page.rst
docs/user-guide/styling/: css-modules.rst  index.rst  style-sheet.rst
examples/htmx/utils/: htmx_runtime.py
recipes/htmx/: README.md
recipes/htmx/utils/: htmx_runtime.py  htmx_typing.py
src/pydom/: __init__.py  component.py  element.py  errors.py  page.py  unicode_chars.py  version.py
src/pydom/context/: __init__.py  context.py  feature.py  standard.py  transformers.py
src/pydom/html/: __init__.py  a.py  abbr.py  address.py  area.py  article.py  aside.py  audio.py  b.py  base.py  bdi.py  bdo.py  blockquote.py  body.py  br.py  button.py  canvas.py  caption.py  cite.py  code.py  col.py  colgroup.py  data.py  datalist.py  dd.py  del_.py  details.py  dfn.py  dialog.py  div.py  dl.py  dt.py  em.py  embed.py  fieldset.py  figcaption.py  figure.py  footer.py  form.py  h1.py  (+75 more)
src/pydom/rendering/: __init__.py  html.py  json.py  props.py  render_state.py
src/pydom/styling/: __init__.py  color.py  css_modules.py  style_object.py  (+1 more)
tests/: base.py  manual.py  simple.py  test_css_modules.py  test_escaping.py  test_html_rendering.py  test_json_rendering.py  test_nested.py  test_rendering.py  utils.py
tests/components/: __init__.py
tests/css/: styles.css
tests/html/: escaping.html  escaping_script.html  nested_components.html  page_inheritance.html
tests/htmx/: test_htmx.py
(+346 files in other folders)
