[project]
name = "python-dom"
authors = [
  { name="Xpo Development", email="dev@xpo.dev" },
]
description = "A Python package for creating and manipulating reusable HTML components"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/xpodev/pydom"
Issues = "https://github.com/xpodev/pydom/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pydom"]

[tool.setuptools.dynamic]
version = {attr="pydom.version.version"}
