[project]
name = "pydom"
authors = [{ name = "Xpo Development", email = "dev@xpo.dev" }]
description = "A Python package for creating and manipulating reusable HTML components"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://pydom.dev"
Issues = "https://github.com/xpodev/pydom/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "pydom.version.version" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
pydom = ["py.typed"]

[project.scripts]
pydom = "pydom.cli:main"
